Header grotendeels af

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,12 @@
     --specific-color-grey: #7A7A7A;
 }
 
+body {
+    min-height: 100vh;
+}
+
+
+
 /* ------------------------------- 2. Typography ----------------------------------- */
 
 html {
@@ -50,13 +56,78 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Merriweather', serif;
 }
 
+h1 {
+    font-weight: bold;
+}
+
 /* ------------------------------- 3. Layout --------------------------------------- */
 /* ---------------------- 3.1 Reusables ----------------------- */
+
+.outer-container {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.inner-container {
+    flex-basis: auto;
+    max-width: 525px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+    padding: 4rem 0 6rem 0;
+
+}
+
 /* ---------------------- 3.2 Specific ------------------------ */
 /* ------------------------------- 4. Areas ---------------------------------------- */
 /* ---------------------- 4.1 Header -------------------------- */
+
+header {
+    background: rgb(72,69,228);
+    background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
+}
+
 /* --------------- 4.1.1 Navigation Bar ---------------- */
+
+.nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 2rem;
+    padding: 1rem 2rem;
+}
+
+.nav-bar a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
 /* --------------- 4.1.2 Hero Section ------------------ */
+
+.hero-section {
+    color: #FFFFFF;
+}
+
+.hero-section button {
+    background-color: var(--general-color-pink);
+    color: #FFFFFF;
+    padding: 1rem 1.5rem;
+    border-radius: 30px;
+    box-shadow: 2px 4px 12px hsl(259, 72%, 30%);
+    margin-bottom: 2rem;
+    border: 1px solid var(--general-color-pink);
+;
+}
+
 /* ---------------------- 4.2 Main ---------------------------- */
 /* --------------- 4.2.1 Introduction ------------------ */
 /* --------------- 4.2.2 Projects ---------------------- */
@@ -65,3 +136,21 @@ h1, h2, h3, h4, h5, h6 {
 /* --------------- 4.3.1 Form -------------------------- */
 /* --------------- 4.3.2 Footer Bar -------------------- */
 /* ------------------------------- 5. Media Queries -------------------------------- */
+
+@media screen and (min-width: 400px) {
+    .nav-bar {
+        justify-content: flex-end;
+        gap: 2.5rem;
+        padding-right: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    html {
+        font-size: 18px;
+    }
+
+    .nav-bar a {
+        font-weight: normal;
+    }
+}
