--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@ body {
 /* ------------------------------- 2. Typography ----------------------------------- */
 
 html {
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -85,11 +85,12 @@ h1 {
 
 }
 
+/* ---------------------- 3.2 Specific ------------------------ */
+
 h4 {
     color: var(--general-color-purple);
 }
 
-/* ---------------------- 3.2 Specific ------------------------ */
 /* ------------------------------- 4. Areas ---------------------------------------- */
 /* ---------------------- 4.1 Header -------------------------- */
 
@@ -131,7 +132,7 @@ header {
     border: 1px solid var(--general-color-pink);
 }
 
-.header-symbol-1 {
+.header-symbol {
     background-image: url("../assets/symbols/squiggle_line_stripe.svg");
     position: absolute;
     left: calc(50% - 40px);
@@ -151,15 +152,15 @@ main a {
 /* --------------- 4.2.1 Introduction ------------------ */
 
 .introduction p {
-    margin-top: 2rem;
+    margin: 2rem 0;
 }
 
 /* --------------- 4.2.2 Projects ---------------------- */
 
 .outer-container-projects {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+   align-items: center;
 }
 
 .inner-container-projects {
@@ -169,6 +170,7 @@ main a {
     align-items: center;
     margin: 0 1rem;
     max-width: 500px;
+    gap: 0;
     flex-wrap: wrap-reverse;
 }
 
@@ -179,6 +181,7 @@ main a {
     flex-shrink: 1;
     flex-grow: 1;
     gap: 2rem;
+    margin: 2rem 0;
 }
 
 .projects a {
@@ -189,12 +192,19 @@ main a {
 
 .projects img {
     width: 100%;
+    box-shadow: 0 4px 12px lightgrey;
 }
 
 .image-wrapper {
     flex-basis: auto;
 }
 
+.project-symbol {
+    background-image: url("../assets/symbols/squiggle_line.svg");
+    background-size: cover;
+    width: 2.25rem;
+    height: .3rem;
+}
 
 /* --------------- 4.2.3 Services ---------------------- */
 /* ---------------------- 4.3 Footer -------------------------- */
@@ -203,6 +213,10 @@ main a {
 /* ------------------------------- 5. Media Queries -------------------------------- */
 
 @media screen and (min-width: 400px) {
+    html {
+        font-size: 16px;
+    }
+
     .nav-bar {
         justify-content: flex-end;
         gap: 2.5rem;
@@ -223,9 +237,18 @@ main a {
         padding: 1rem 2rem;
     }
 
+    .outer-container-projects {
+        gap: 3rem;
+    }
+
     .inner-container-projects {
         flex-wrap: nowrap;
         max-width: 1000px;
+        gap: 4rem;
+    }
+
+    .inner-container-projects:nth-child(even) {
+        flex-direction: row-reverse;
     }
 
     .text-wrapper {
@@ -234,5 +257,7 @@ main a {
         flex-shrink: 0;
         flex-grow: 0;
         margin-left: 1rem;
+        /*margin-right: 4rem;*/
     }
 }
+
