--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,7 @@ header {
     background-image: url("../assets/symbols/squiggle_line_stripe.svg");
     position: absolute;
     left: calc(50% - 40px);
-    bottom: 0px;
+    bottom: 0;
     width: 80px;
     height: 80px;
 }
@@ -161,7 +161,7 @@ main a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 0 6rem 0;
+    padding: 4rem 0 4rem 0;
     background-color: var(--specific-color-light-grey);
 }
 
@@ -194,7 +194,7 @@ main a {
 
 .projects img {
     width: 100%;
-    box-shadow: 0 4px 12px lightgrey;
+    box-shadow: 0 1rem 1.5rem lightgrey;
 }
 
 .image-wrapper {
@@ -209,6 +209,72 @@ main a {
 }
 
 /* --------------- 4.2.3 Services ---------------------- */
+
+.outer-container-services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 6rem 4rem 4rem 4rem;
+}
+
+.inner-container-services {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-basis: auto;
+    flex-wrap: wrap;
+    max-width: 900px;
+    gap: 1.5rem;
+}
+
+.article-container {
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    width: 225px;
+    height: 225px;
+    position: relative;
+    padding: 1.5rem;
+    border: 1px solid var(--general-color-purple);
+    box-shadow: 0 5px 10px lightgrey;
+}
+
+.icon-wrapper {
+    width: 2.5rem;
+    height: 2.5rem;
+    background-size: cover;
+    margin-bottom: .5rem;
+}
+
+.article-container p {
+    font-size: .67rem;
+    padding-top: 1rem;
+}
+
+#icon-web-design {
+    background-image: url("../assets/icons/icon_web-design.svg");
+}
+
+#icon-web-development {
+    background-image: url("../assets/icons/icon_web-development.svg");
+}
+
+#icon-ux {
+    background-image: url("../assets/icons/icon_ux.svg");
+}
+
+#icon-design {
+    background-image: url("../assets/icons/icon_graphic-design.svg");
+}
+
+#icon-seo {
+    background-image: url("../assets/icons/icon_seo.svg");
+}
+
+#icon-copywriting {
+    background-image: url("../assets/icons/icon_copywriting.svg");
+}
+
 /* ---------------------- 4.3 Footer -------------------------- */
 /* --------------- 4.3.1 Form -------------------------- */
 /* --------------- 4.3.2 Footer Bar -------------------- */
@@ -224,7 +290,18 @@ main a {
         gap: 2.5rem;
         padding-right: 2rem;
     }
+
+    .article-container {
+        height: 275px;
+        width: 275px;
+    }
+
+    .article-container p {
+        font-size: .75rem;
+    }
 }
+
+
 
 @media screen and (min-width: 768px) {
     html {
@@ -259,6 +336,10 @@ main a {
         flex-shrink: 0;
         flex-grow: 0;
         margin-left: 1rem;
+    }
+
+    .article-container p {
+        font-size: .63rem;
     }
 }
 
