--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,10 +283,56 @@ main a {
 }
 
 .footer-section p {
-    font-size: .8rem;
+    font-size: .85rem;
 }
 
 /* --------------- 4.3.1 Form -------------------------- */
+
+.outer-container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1rem;
+    width: auto;
+}
+
+.inner-container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+    padding: 4rem 0 2rem 0;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.form-container button {
+    margin-top: 2rem;
+    width: 10rem;
+    align-self: center;
+}
+
+.form-title {
+    font-size: .75rem;
+    font-weight: bold;
+}
+
+#email-field, #name-field, #message-field {
+    padding: .75rem;
+    border: transparent;
+    border-radius: 3px;
+    font-size: .8rem;
+}
+
+#email-field, #name-field {
+    margin-bottom: 1rem;
+}
+
 /* --------------- 4.3.2 Footer Bar -------------------- */
 /* ------------------------------- 5. Media Queries -------------------------------- */
 
