--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,6 +301,7 @@ main a {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    max-width: 500px;
     gap: 1rem;
     padding: 4rem 0 2rem 0;
 }
@@ -334,6 +335,18 @@ main a {
 }
 
 /* --------------- 4.3.2 Footer Bar -------------------- */
+
+.outer-container-footer-bar {
+    background-color: var(--general-color-black);
+    color: #FFFFFF;
+}
+
+.inner-container-footer-bar {
+    font-size: .75rem;
+    text-align: center;
+    padding: 1rem;
+}
+
 /* ------------------------------- 5. Media Queries -------------------------------- */
 
 @media screen and (min-width: 400px) {
