Bonus opdracht t/m 4 afgerond

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,7 @@ h4 {
 header {
     background: rgb(72,69,228);
     background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
+    z-index: 0;
 }
 
 /* --------------- 4.1.1 Navigation Bar ---------------- */
@@ -215,7 +216,7 @@ main a {
     padding: 6rem 0 4rem 0;
     position: relative;
     background-color: var(--specific-color-light-grey);
-    z-index: -2;
+    z-index: 0;
 }
 
 .inner-container-projects {
@@ -228,6 +229,7 @@ main a {
     gap: 0;
     flex-wrap: wrap-reverse;
     position: relative;
+    z-index: 1;
 }
 
 .text-wrapper {
@@ -244,6 +246,11 @@ main a {
     text-transform: uppercase;
     font-weight: 600;
     font-size: .75rem;
+    z-index: 1;
+}
+
+.projects a:hover {
+    cursor: pointer;
 }
 
 .projects img {
