--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,8 +101,6 @@ button:hover {
 .triangle-container-top {
     height: 0;
     width: 0;
-    padding: 0;
-    margin: 0;
     border-bottom: 30px solid yellow;
     border-right: 97.5vw solid transparent;
 }
@@ -110,9 +108,7 @@ button:hover {
 .triangle-container-bottom {
     height: 0;
     width: 0;
-    padding: 0;
-    margin: 0;
-    border-left: 98.5vw solid transparent;
+    border-left: 97.5vw solid transparent;
     border-top: 30px solid #FFFFFF;
 }
 
@@ -126,9 +122,7 @@ h4 {
 /* ---------------------- 4.1 Header -------------------------- */
 
 header {
-    background: rgb(72,69,228);
-    background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
-    z-index: 0;
+    background-image: url("../assets/images/noise-texture.png"), linear-gradient(90deg, rgba(72,69,228,1) 15%, rgba(87,34,205,1) 90%);
 }
 
 /* --------------- 4.1.1 Navigation Bar ---------------- */
@@ -247,6 +241,20 @@ main a {
     font-weight: 600;
     font-size: .75rem;
     z-index: 1;
+    /*display: inline;*/
+}
+
+.projects a::after {
+    content: "";
+    display: inline-block;
+    width: 3%;
+    height: 1px;
+    background-color: var(--general-color-purple);
+    transition: width .35s ease-in-out;
+}
+
+.projects a:hover::after {
+    width: 15%;
 }
 
 .projects a:hover {
@@ -375,8 +383,7 @@ main a {
 
 .footer-section {
     color: #FFFFFF;
-    background: rgb(72,69,228);
-    background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
+    background-image: url("../assets/images/noise-texture.png"), linear-gradient(90deg, rgba(72,69,228,1) 15%, rgba(87,34,205,1) 90%);
     position: relative;
 }
 
@@ -387,10 +394,7 @@ main a {
 .footer-section .triangle-container-bottom {
     position: relative;
     top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-
+    right: -10px;
 }
 
 /* --------------- 4.3.1 Form -------------------------- */
